libtorrent/c/libtorrent.h

enum tags
{
	TAG_END = 0,

	SES_FINGERPRINT, // char const*, 2 character string
	SES_LISTENPORT, // int
	SES_LISTENPORT_END, // int
	SES_VERSION_MAJOR, // int
	SES_VERSION_MINOR, // int
	SES_VERSION_TINY, // int
	SES_VERSION_TAG, // int
	SES_FLAGS, // int
	SES_ALERT_MASK, // int
	SES_LISTEN_INTERFACE, // char const*

	// === add_torrent tags ===

	// identifying the torrent to add
	TOR_FILENAME = 0x100, // char const*
	TOR_TORRENT, // char const*, specify size of buffer with TOR_TORRENT_SIZE
	TOR_TORRENT_SIZE, // int
	TOR_INFOHASH, // char const*, must point to a 20 byte array
	TOR_INFOHASH_HEX, // char const*, must point to a 40 byte string
	TOR_MAGNETLINK, // char const*, url

	TOR_TRACKER_URL, // char const*
	TOR_RESUME_DATA, // char const*
	TOR_RESUME_DATA_SIZE, // int
	TOR_SAVE_PATH, // char const*
	TOR_NAME, // char const*
	TOR_PAUSED, // int
	TOR_AUTO_MANAGED, // int
	TOR_DUPLICATE_IS_ERROR, // int
	TOR_USER_DATA, //void*
	TOR_SEED_MODE, // int
	TOR_OVERRIDE_RESUME_DATA, // int
	TOR_STORAGE_MODE, // int

	SET_UPLOAD_RATE_LIMIT = 0x200, // int
	SET_DOWNLOAD_RATE_LIMIT, // int
	SET_LOCAL_UPLOAD_RATE_LIMIT, // int
	SET_LOCAL_DOWNLOAD_RATE_LIMIT, // int
	SET_MAX_UPLOAD_SLOTS, // int
	SET_MAX_CONNECTIONS, // int
	SET_SEQUENTIAL_DOWNLOAD, // int, torrent only
	SET_SUPER_SEEDING, // int, torrent only
	SET_HALF_OPEN_LIMIT, // int, session only
	SET_PEER_PROXY, // proxy_setting const*, session_only
	SET_WEB_SEED_PROXY, // proxy_setting const*, session_only
	SET_TRACKER_PROXY, // proxy_setting const*, session_only
	SET_DHT_PROXY, // proxy_setting const*, session_only
	SET_PROXY, // proxy_setting const*, session_only
	SET_ALERT_MASK,
// int, session_only
};
enum state_t
{
	queued_for_checking,
	checking_files,
	downloading_metadata,
	downloading,
	finished,
	seeding,
	allocating,
	checking_resume_data
};
//
// part structures
//

struct error_code
{
	int value;
	char* category;
	char * message;
};
struct endpoint
{
	const char* addr;

	int port;

	struct error_code error;
};
//
// alert structures
//

struct alert
{
	int timestamp;
	char *message;
	char *what;
	int category;
};
struct torrent_alert
{
	struct alert alert;

	void* handle;
};
struct tracker_alert
{
	struct torrent_alert torrent_alert;

	char* url;
};
struct read_piece_alert
{
	struct torrent_alert torrent_alert;

	void* buffer;
	int piece;
	int size;
};
struct file_renamed_alert
{
	struct torrent_alert torrent_alert;

	const char* name;
	int index;
};
struct file_rename_failed_alert
{
	struct torrent_alert torrent_alert;

	int index;
	struct error_code error;
};
struct tracker_announce_alert
{
	struct tracker_alert tracker_alert;

	int event;
};
struct tracker_error_alert
{
	struct tracker_alert tracker_alert;

	int times_in_row;
	int status_code;
};
struct tracker_reply_alert
{
	struct tracker_alert tracker_alert;

	int num_peers;
};
struct dht_reply_alert
{
	struct tracker_alert tracker_alert;

	int num_peers;
};
struct tracker_warning_alert
{
	struct tracker_alert tracker_alert;

	const char* msg;
};
struct scrape_reply_alert
{
	struct tracker_alert tracker_alert;

	int incomplete;
	int complete;
};
struct scrape_failed_alert
{
	struct tracker_alert tracker_alert;

	const char * msg;
};
struct hash_failed_alert
{
	struct torrent_alert torrent_alert;

	int piece_index;
};
struct peer_alert
{
	struct torrent_alert torrent_alert;

	struct endpoint ip;
	int pid;
};
struct peer_ban_alert
{
	struct peer_alert peer_alert;

};
struct peer_snubbed_alert
{
	struct peer_alert peer_alert;
};
struct peer_unsnubbed_alert
{
	struct peer_alert peer_alert;
};
struct file_completed_alert
{
	struct torrent_alert torrent_alert;

	int index;
};
struct performance_alert
{
	struct torrent_alert torrent_alert;

	enum performance_warning_t
	{
		outstanding_disk_buffer_limit_reached,
		outstanding_request_limit_reached,
		upload_limit_too_low,
		download_limit_too_low,
		send_buffer_watermark_too_low
	};

	enum performance_warning_t warning_code;
};
struct state_changed_alert
{
	struct torrent_alert torrent_alert;

	enum state_t state;
	enum state_t prev_state;
};
struct file_entry
{
	const char* path;
	long long size;
	long long mtime;
	char pad_file;
	char hidden_attribute;
	char executable_attribute;
	char symlink_attribute;
	const char* symlink_path;
};
struct torrent_title
{
	const char* name;
	const char* comment;
	const char* creator;
	long long mtime;
};
long torrent_get_hash(void* tor);
// use SET_* tags in tag list
int torrent_set_settings(void* tor, int first_tag, ...);
int torrent_get_setting(void* tor, int tag, void* value, int* value_size);
int torrent_save_state(void* tor);
int torrent_pause(void* tor);
int torrent_resume(void* tor);
int torrent_recheck(void* tor);
bool torrent_has_metadata(void* tor);
void* torrent_get_metadata(void* tor);
int torrent_get_metadata_size(void* tor);
// get torrent title
int torrent_info(void* tor, torrent_title* t);
// free torrent title
int torrent_info_free(void* tor, torrent_title* t);
// get files count
int torrent_files_count(void* tor);
// get file_entry struct
int torrent_files_get(void* tor, int i, struct file_entry* f);
// free file_entry struct
int torrent_files_free(void* tor, struct file_entry* f);
// rename
int torrent_files_rename(void* tor, int i, const char* f);
//
// alert_*
//

int alert_get_type(void* alert);
peer_alert * cast_to_peer_alert(void* pop);
void free_peer_alert(peer_alert * aa);
read_piece_alert * cast_to_read_piece_alert(void* pop);
void free_read_piece_alert(read_piece_alert * aa);
file_completed_alert * cast_to_file_completed_alert(void* pop);
void free_file_completed_alert(file_completed_alert * aa);
file_renamed_alert * cast_to_file_renamed_alert(void* pop);
void free_file_renamed_alert(file_renamed_alert * aa);
file_rename_failed_alert * cast_to_file_rename_failed_alert(void* pop);
void free_file_rename_failed_alert(file_rename_failed_alert * aa);
performance_alert * cast_to_performance_alert(void* pop);
void free_performance_alert(performance_alert * aa);
state_changed_alert * cast_to_state_changed_alert(void* pop);
void free_state_changed_alert(state_changed_alert * aa);
tracker_error_alert * cast_to_tracker_error_alert(void* pop);
void free_tracker_error_alert(tracker_error_alert * aa);
tracker_warning_alert * cast_to_tracker_warning_alert(void* pop);
void free_tracker_warning_alert(tracker_warning_alert * aa);
scrape_reply_alert * cast_to_scrape_reply_alert(void* pop);
void free_scrape_reply_alert(scrape_reply_alert * aa);
scrape_failed_alert * cast_to_scrape_failed_alert(void* pop);
void free_scrape_failed_alert(scrape_failed_alert * aa);
tracker_reply_alert * cast_to_tracker_reply_alert(void* pop);
void free_tracker_reply_alert(tracker_reply_alert * aa);
dht_reply_alert * cast_to_dht_reply_alert(void* pop);
void free_dht_reply_alert(dht_reply_alert * aa);
tracker_announce_alert * cast_to_tracker_announce_alert(void* pop);
void free_tracker_announce_alert(tracker_announce_alert * aa);
hash_failed_alert * cast_to_hash_failed_alert(void* pop);
void free_hash_failed_alert(hash_failed_alert * aa);
peer_ban_alert * cast_to_peer_ban_alert(void* pop);
void free_peer_ban_alert(peer_ban_alert * aa);
peer_unsnubbed_alert * cast_to_peer_unsnubbed_alert(void* pop);
void free_peer_unsnubbed_alert(peer_unsnubbed_alert * aa);
peer_snubbed_alert * cast_to_peer_snubbed_alert(void* pop);
void free_peer_snubbed_alert(peer_snubbed_alert * aa);