src/main/java/com/github/axet/torrent/rasterbar/TorrentLibrary.java

	/**
	 * Original signature : <code>long torrent_get_hash(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:629</i>
	 */
	NativeLong torrent_get_hash(Pointer tor);
	/**
	 * use SET_* tags in tag list<br>
	 * Original signature : <code>int torrent_set_settings(void*, int, null)</code><br>
	 * <i>native declaration : c/libtorrent.h:634</i>
	 */
	int torrent_set_settings(Pointer tor, int first_tag, Object... varargs);
	/**
	 * Original signature : <code>int torrent_get_setting(void*, int, void*, int*)</code><br>
	 * <i>native declaration : c/libtorrent.h:636</i><br>
	 * @deprecated use the safer methods {@link #torrent_get_setting(com.sun.jna.Pointer, int, com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #torrent_get_setting(com.sun.jna.Pointer, int, com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	int torrent_get_setting(Pointer tor, int tag, Pointer value, IntByReference value_size);
	/**
	 * Original signature : <code>int torrent_get_setting(void*, int, void*, int*)</code><br>
	 * <i>native declaration : c/libtorrent.h:636</i>
	 */
	int torrent_get_setting(Pointer tor, int tag, Pointer value, IntBuffer value_size);
	/**
	 * Original signature : <code>int torrent_save_state(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:638</i>
	 */
	int torrent_save_state(Pointer tor);
	/**
	 * Original signature : <code>int torrent_pause(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:640</i>
	 */
	int torrent_pause(Pointer tor);
	/**
	 * Original signature : <code>int torrent_resume(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:642</i>
	 */
	int torrent_resume(Pointer tor);
	/**
	 * Original signature : <code>int torrent_recheck(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:644</i>
	 */
	int torrent_recheck(Pointer tor);
	/**
	 * Original signature : <code>bool torrent_has_metadata(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:646</i>
	 */
	byte torrent_has_metadata(Pointer tor);
	/**
	 * Original signature : <code>void* torrent_get_metadata(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:648</i>
	 */
	Pointer torrent_get_metadata(Pointer tor);
	/**
	 * Original signature : <code>int torrent_get_metadata_size(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:650</i>
	 */
	int torrent_get_metadata_size(Pointer tor);
	/**
	 * get torrent title<br>
	 * Original signature : <code>int torrent_info(void*, torrent_title*)</code><br>
	 * <i>native declaration : c/libtorrent.h:655</i>
	 */
	int torrent_info(Pointer tor, torrent_title t);
	/**
	 * free torrent title<br>
	 * Original signature : <code>int torrent_info_free(void*, torrent_title*)</code><br>
	 * <i>native declaration : c/libtorrent.h:660</i>
	 */
	int torrent_info_free(Pointer tor, torrent_title t);
	/**
	 * get files count<br>
	 * Original signature : <code>int torrent_files_count(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:665</i>
	 */
	int torrent_files_count(Pointer tor);
	/**
	 * get file_entry struct<br>
	 * Original signature : <code>int torrent_files_get(void*, int, file_entry*)</code><br>
	 * <i>native declaration : c/libtorrent.h:670</i>
	 */
	int torrent_files_get(Pointer tor, int i, file_entry f);
	/**
	 * free file_entry struct<br>
	 * Original signature : <code>int torrent_files_free(void*, file_entry*)</code><br>
	 * <i>native declaration : c/libtorrent.h:675</i>
	 */
	int torrent_files_free(Pointer tor, file_entry f);
	/**
	 * rename<br>
	 * Original signature : <code>int torrent_files_rename(void*, int, const char*)</code><br>
	 * <i>native declaration : c/libtorrent.h:680</i><br>
	 * @deprecated use the safer methods {@link #torrent_files_rename(com.sun.jna.Pointer, int, java.lang.String)} and {@link #torrent_files_rename(com.sun.jna.Pointer, int, com.sun.jna.Pointer)} instead
	 */
	@Deprecated 
	int torrent_files_rename(Pointer tor, int i, Pointer f);
	/**
	 * rename<br>
	 * Original signature : <code>int torrent_files_rename(void*, int, const char*)</code><br>
	 * <i>native declaration : c/libtorrent.h:680</i>
	 */
	int torrent_files_rename(Pointer tor, int i, String f);
	/**
	 * Original signature : <code>int alert_get_type(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:682</i>
	 */
	int alert_get_type(Pointer alert);
	/**
	 * Original signature : <code>peer_alert* cast_to_peer_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:684</i>
	 */
	peer_alert cast_to_peer_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_peer_alert(peer_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:686</i>
	 */
	void free_peer_alert(peer_alert aa);
	/**
	 * Original signature : <code>read_piece_alert* cast_to_read_piece_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:688</i>
	 */
	read_piece_alert cast_to_read_piece_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_read_piece_alert(read_piece_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:690</i>
	 */
	void free_read_piece_alert(read_piece_alert aa);
	/**
	 * Original signature : <code>file_completed_alert* cast_to_file_completed_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:692</i>
	 */
	file_completed_alert cast_to_file_completed_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_file_completed_alert(file_completed_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:694</i>
	 */
	void free_file_completed_alert(file_completed_alert aa);
	/**
	 * Original signature : <code>file_renamed_alert* cast_to_file_renamed_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:696</i>
	 */
	file_renamed_alert cast_to_file_renamed_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_file_renamed_alert(file_renamed_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:698</i>
	 */
	void free_file_renamed_alert(file_renamed_alert aa);
	/**
	 * Original signature : <code>file_rename_failed_alert* cast_to_file_rename_failed_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:700</i>
	 */
	file_rename_failed_alert cast_to_file_rename_failed_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_file_rename_failed_alert(file_rename_failed_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:702</i>
	 */
	void free_file_rename_failed_alert(file_rename_failed_alert aa);
	/**
	 * Original signature : <code>performance_alert* cast_to_performance_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:704</i>
	 */
	performance_alert cast_to_performance_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_performance_alert(performance_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:706</i>
	 */
	void free_performance_alert(performance_alert aa);
	/**
	 * Original signature : <code>state_changed_alert* cast_to_state_changed_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:708</i>
	 */
	state_changed_alert cast_to_state_changed_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_state_changed_alert(state_changed_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:710</i>
	 */
	void free_state_changed_alert(state_changed_alert aa);
	/**
	 * Original signature : <code>tracker_error_alert* cast_to_tracker_error_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:712</i>
	 */
	tracker_error_alert cast_to_tracker_error_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_tracker_error_alert(tracker_error_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:714</i>
	 */
	void free_tracker_error_alert(tracker_error_alert aa);
	/**
	 * Original signature : <code>tracker_warning_alert* cast_to_tracker_warning_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:716</i>
	 */
	tracker_warning_alert cast_to_tracker_warning_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_tracker_warning_alert(tracker_warning_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:718</i>
	 */
	void free_tracker_warning_alert(tracker_warning_alert aa);
	/**
	 * Original signature : <code>scrape_reply_alert* cast_to_scrape_reply_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:720</i>
	 */
	scrape_reply_alert cast_to_scrape_reply_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_scrape_reply_alert(scrape_reply_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:722</i>
	 */
	void free_scrape_reply_alert(scrape_reply_alert aa);
	/**
	 * Original signature : <code>scrape_failed_alert* cast_to_scrape_failed_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:724</i>
	 */
	scrape_failed_alert cast_to_scrape_failed_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_scrape_failed_alert(scrape_failed_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:726</i>
	 */
	void free_scrape_failed_alert(scrape_failed_alert aa);
	/**
	 * Original signature : <code>tracker_reply_alert* cast_to_tracker_reply_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:728</i>
	 */
	tracker_reply_alert cast_to_tracker_reply_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_tracker_reply_alert(tracker_reply_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:730</i>
	 */
	void free_tracker_reply_alert(tracker_reply_alert aa);
	/**
	 * Original signature : <code>dht_reply_alert* cast_to_dht_reply_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:732</i>
	 */
	dht_reply_alert cast_to_dht_reply_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_dht_reply_alert(dht_reply_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:734</i>
	 */
	void free_dht_reply_alert(dht_reply_alert aa);
	/**
	 * Original signature : <code>tracker_announce_alert* cast_to_tracker_announce_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:736</i>
	 */
	tracker_announce_alert cast_to_tracker_announce_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_tracker_announce_alert(tracker_announce_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:738</i>
	 */
	void free_tracker_announce_alert(tracker_announce_alert aa);
	/**
	 * Original signature : <code>hash_failed_alert* cast_to_hash_failed_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:740</i>
	 */
	hash_failed_alert cast_to_hash_failed_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_hash_failed_alert(hash_failed_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:742</i>
	 */
	void free_hash_failed_alert(hash_failed_alert aa);
	/**
	 * Original signature : <code>peer_ban_alert* cast_to_peer_ban_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:744</i>
	 */
	peer_ban_alert cast_to_peer_ban_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_peer_ban_alert(peer_ban_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:746</i>
	 */
	void free_peer_ban_alert(peer_ban_alert aa);
	/**
	 * Original signature : <code>peer_unsnubbed_alert* cast_to_peer_unsnubbed_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:748</i>
	 */
	peer_unsnubbed_alert cast_to_peer_unsnubbed_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_peer_unsnubbed_alert(peer_unsnubbed_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:750</i>
	 */
	void free_peer_unsnubbed_alert(peer_unsnubbed_alert aa);
	/**
	 * Original signature : <code>peer_snubbed_alert* cast_to_peer_snubbed_alert(void*)</code><br>
	 * <i>native declaration : c/libtorrent.h:752</i>
	 */
	peer_snubbed_alert cast_to_peer_snubbed_alert(Pointer pop);
	/**
	 * Original signature : <code>void free_peer_snubbed_alert(peer_snubbed_alert*)</code><br>
	 * <i>native declaration : c/libtorrent.h:754</i>
	 */
	void free_peer_snubbed_alert(peer_snubbed_alert aa);
